PHOENIX-881: end2end test fails to run against a live cluster using end2endtest.py